<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.cowman.fomnrr.MainActivity">

    <ImageView
        android:id="@+id/main_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/img_main"
        android:adjustViewBounds="true"
        android:contentDescription="@string/main_image_alt" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_image_height" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white">

                <HorizontalScrollView
                    android:id="@+id/main_nav"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:scrollbars="none">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp">

                        <TextView
                            android:id="@+id/main_event_link"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_events"
                            android:drawableLeft="@drawable/ic_events"
                            android:drawablePadding="8dp"
                            android:onClick="viewEvents"
                            android:paddingLeft="16dp"
                            android:paddingStart="16dp"
                            android:text="@string/main_event_link"
                            android:textColor="@color/link_blue"
                            android:textSize="@dimen/main_size"
                            android:textStyle="bold"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/main_map_link"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_map"
                            android:drawableLeft="@drawable/ic_map"
                            android:drawablePadding="8dp"
                            android:onClick="viewMap"
                            android:paddingLeft="24dp"
                            android:paddingStart="24dp"
                            android:text="@string/main_maps_link"
                            android:textColor="#5998FF"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:layout_constraintLeft_toRightOf="@+id/main_event_link"
                            app:layout_constraintStart_toEndOf="@+id/main_event_link"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/main_membership_link"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_membership"
                            android:drawableLeft="@drawable/ic_membership"
                            android:drawablePadding="8dp"
                            android:onClick="viewMembership"
                            android:paddingLeft="24dp"
                            android:paddingRight="16dp"
                            android:paddingStart="24dp"
                            android:paddingEnd="16dp"
                            android:text="@string/main_membership_link"
                            android:textColor="#5998FF"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:layout_constraintLeft_toRightOf="@+id/main_map_link"
                            app:layout_constraintStart_toEndOf="@+id/main_map_link"
                            app:layout_constraintTop_toTopOf="parent" />

                    </LinearLayout>

                </HorizontalScrollView>

                <TextView
                    android:id="@+id/mission_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/main_nav"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/main_header"
                    android:textSize="@dimen/header_height"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/mission_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mission_header"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:paddingBottom="15dp"
                    android:text="@string/main_body"
                    android:textSize="18sp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>